fix font on ios

--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -17,7 +17,7 @@ $tablet: 900px;
     white-space: pre-wrap;
   }
   p {
-    font-family: golos-regular;
+    font-family: golos;
   }
   width: 100%;
   display: flex;
@@ -246,7 +246,7 @@ $tablet: 900px;
             }
             span {
               white-space: pre-line;
-              font-family: golos-regular;
+              font-family: golos;
               color: #00000099;
             }
 
