--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -66,7 +66,7 @@ $animation-duration: 0.3s;
         }
         p {
           font-size: 0.875em;
-          font-family: Golos;
+          font-family: golos;
           line-height: 1.1em;
         }
         .bottom {
@@ -117,7 +117,7 @@ $animation-duration: 0.3s;
     align-items: center;
     p {
       font-weight: 500;
-      font-family: Golos;
+      font-family: golos;
       font-size: 1.2em;
     }
     h3 {
